overlays/sandbox/membership-hub-gke-autopilot2/compiled/newapp-1/networkpolicy_app-allow-newapp-2.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-allow-newapp-2
  namespace: newapp-1
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: newapp-2
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: asm-gateway
